@@ -1,7 +1,6 @@
 package id.ac.ui.cs.advprog.subsbox_item_management.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -21,14 +20,14 @@ public class SubscriptionBoxServiceImpl implements SubscriptionBoxService{
     }
 
     @Override
-    public SubscriptionBox deleteBox(String id) {
+    public SubscriptionBox deleteBox(Long id) {
         SubscriptionBox box = subscriptionBoxRepository.findById(id).orElse(null);
         subscriptionBoxRepository.deleteById(id);
         return box;
     }
 
     @Override
-    public SubscriptionBox editBox(String id, SubscriptionBox box) {
+    public SubscriptionBox editBox(Long id, SubscriptionBox box) {
         return subscriptionBoxRepository.findById(id).map(subscriptionBox -> {
             subscriptionBox.setName(box.getName());
             subscriptionBox.setPrice(box.getPrice());
@@ -45,19 +44,13 @@ public class SubscriptionBoxServiceImpl implements SubscriptionBoxService{
 
     @Override
     public List<SubscriptionBox> filterByPrice(int price) {
-        List<SubscriptionBox> boxes =  subscriptionBoxRepository.findAll().stream().filter(var1 -> {return var1.getPrice()==price;}).collect(Collectors.toList()) ;
-        return boxes;
+        return subscriptionBoxRepository.findAll().stream()
+                .filter(var1 -> var1.getPrice() == price)
+                .toList();
     }
 
     @Override
-    public String viewDetails(String boxId) {
-        return subscriptionBoxRepository.findById(boxId).get().getName();
+    public SubscriptionBox viewDetails(Long boxId) {
+        return subscriptionBoxRepository.findById(boxId).orElse(null);
     }
-
-
-    // need Rating
-    // @Override
-    // public CompletableFuture<List<SubscriptionBox>> getFilteredBoxesByRatingAsync(String name) {
-    //     return CompletableFuture.supplyAsync(() -> subscriptionBoxRepository.findByNameContaining(name));
-    // }
 }
